--- a/Pages/Donate.cshtml
+++ b/Pages/Donate.cshtml
@@ -42,4 +42,6 @@
 
 <div>
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Donating</a>
+    <a class="btn btn-primary" asp-action="Checkout" asp-controller="Donation">Checkout</a>
 </div>
+
