--- a/Pages/Admin/Projects.razor
+++ b/Pages/Admin/Projects.razor
@@ -46,6 +46,8 @@
     </tbody>
 </table>
 
+<NavLink class="btn btn-primary" href="/admin/projects/create">Create</NavLink>
+
 
 @code {
     public IWaterProjectRepository repo => Service;
